<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:layout_width="230dp"
            android:layout_height="230dp">

            <ImageView
                app:srcCompat="@drawable/heatsink"
                android:id="@+id/imageView"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="100dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/led_cold"
                            android:id="@+id/led3_ww"
                            android:layout_weight="1" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="100dp">

                        <ImageView
                            app:srcCompat="@drawable/led_hot"
                            android:id="@+id/led4_nw"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </FrameLayout>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="100dp">

                        <ImageView
                            app:srcCompat="@drawable/led_hot"
                            android:id="@+id/led1_nw"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="100dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/led_cold"
                            android:id="@+id/led2_ww"
                            android:layout_weight="1" />
                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="TextView"
                tools:text="@string/temperature_text" />

            <TextView
                android:id="@+id/voltage_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/voltage_text" />

        </LinearLayout>

        <TextView
            android:text="@string/brightness_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brightness_textview"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brightness_seekbar"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/color_temperature_textview"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            tools:text="@string/color_temperature_text"
            android:gravity="center" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/color_temperature_seekbar"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="right"
            android:layout_marginRight="12dp">

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/psu_button"
                tools:text="@string/psu_button_text" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/led_all_button"
                tools:text="@string/led_all_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipPortTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textColorHint="@android:color/tertiary_text_dark"
                android:layout_weight="0.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipPortEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/background_dark"

                    android:hint="IP:port" />
            </com.google.android.material.textfield.TextInputLayout>

            <ToggleButton
                android:id="@+id/ipPortToggleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_weight="0.85"
                android:text="ToggleButton" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>